--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mandatory 6–7 Minute Gate</title>
+<title>Instant Noodles</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   :root {
@@ -138,8 +138,8 @@
 <body>
 <div class="shell" role="application" aria-label="Mandatory interaction gate">
   <header>
-    <h1>Interaction gate — you must complete all stages</h1>
-    <div class="badge">Cumulative minimum: ~6.7 minutes</div>
+    <h1>ISorry! Your file has been blocked by annoying adrian services/h1>
+    <div class="badge">Finish Stages To Access English Script</div>
   </header>
 
   <div class="content">
