Update final action message in index.html

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
     <div class="final">
       <div class="lock" id="lockDot" aria-hidden="true"></div>
       <div>
-        <div style="font-weight:700;">Final action</div>
-        <div class="note">This unlocks only after all four stages are fully complete without interruption.</div>
+        <div style="font-weight:700;">Sorry! Your Access To The English Script Has Been LOCKED</div>
+        <div class="note">You can only proceed to your instant noodles english script after finishing all 4 stages of grief above. In order. No fail.</div>
       </div>
       <button id="finalBtn" disabled>Proceed</button>
     </div>
