--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="lock" id="lockDot" aria-hidden="true"></div>
       <div>
         <div style="font-weight:700;">Sorry! Your Access To The English Script Has Been LOCKED</div>
-        <div class="note">You can only proceed to your instant noodles english script after finishing all 4 stages of grief above. In order. No fail.</div>
+        <div class="note">You can only proceed to The Perfect English Script after finishing all 4 stages of grief above. In order. No fail.</div>
       </div>
       <button id="finalBtn" disabled>Proceed</button>
     </div>
