Update alert message with a link

--- a/index.html
+++ b/index.html
@@ -547,8 +547,7 @@
       alert('You have not completed all stages.');
       return;
     }
-    // The “single button” after suffering through the gate
-    alert('Finally. Proceeding.');
+    alert('https://docs.google.com/document/d/1HwGjqIKNFgmIdixiRhcjB1NIRvOg_6ZXb7Qd-oJeRWs/edit?usp=sharing');
   });
 
   // Initial resets
