--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     s4: {dragging:false, pct:0, interval:null},
     locked:true
   };
-
+  window.state = state;
   const el = {
     holdBtn: document.getElementById('holdBtn'),
     s1Progress: document.getElementById('s1_progress'),
